--- a/package.json
+++ b/package.json
@@ -9,23 +9,28 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
     "@types/react-dom": "16.8.2",
+    "electron-react-devtools": "^0.5.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
+    "react-hot-loader": "^4.6.5",
+    "source-map-support": "^0.5.10",
     "typeface-roboto": "^0.0.54",
     "typescript": "3.3.3333"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --single-quote --write",
       "git add"
     ]
+  },
+  "electronWebpack": {
+    "renderer": {
+      "webpackConfig": "webpack.config.js"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,9 +47,18 @@
     }
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "copy-webpack-plugin": "^5.0.0",
+    "electron": "^4.0.4",
+    "electron-webpack": "^2.6.1",
+    "electron-webpack-ts": "^3.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
     "prettier": "^1.16.4",
-    "prettier-tslint": "^0.4.2"
+    "prettier-tslint": "^0.4.2",
+    "typescript": "^3.3.3",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
