--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,6 +1,6 @@
 # Path to sources
-sonar.sources=./src
-sonar.typescript.tsconfigPath=./tsconfig.json
+# sonar.sources=./src
+# sonar.typescript.tsconfigPath=./tsconfig.json
 #sonar.exclusions=
 #sonar.inclusions=
 
